--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
       margin: -60px auto 40px auto; /* üstteki -60px kalsın, sağ-sol ortalasın */
       border:1px solid var(--border);
       border-radius: 24px;
-      backdrop-filter: blur(12px);
+      backdrop-filter: blur(12p x);
       box-shadow: var(--shadow);
       padding: clamp(20px, 5vw, 36px);
       
@@ -121,14 +121,15 @@ body {
       <p>
         Merhabalar, biz <strong>NeoATAL</strong> kuruluşuyuz. <br><br>
         Adem Tolunay Anadolu Lisesi'nin mevcut <em>Marjinal</em> tarzına karşı geliyoruz. 
-        Biz ATAL'ın aykırılarıyız. Bu durumun öğretmenlerimiz ile bir bağlantısı yoktur. Sadece ATAL'ın mevcut öğrenci kalitesini eleştirmekteyiz.<br><br>
+        Biz ATAL'ın aykırılarıyız. Bu durumun öğretmenlerimiz ile bir bağlantısı yoktur. Onlara çok büyük saygı duyuyoruz. Sadece ATAL'ın mevcut öğrenci kalitesini eleştirmekteyiz.<br><br>
         Temel olarak 3 gruptan üçüncüsü biziz: <br>
         1) Kolej Ucubeleri<br>
         2) Kadıköylü Hippiler <br>
         3) Azınlık Aykırılar (biz) <br><br>
         Biz ATAL'ın böyle saçma bir şekilde tanınmasına karşıyız. Bizler ATAL'ın marjinallikle, ilgi bağımlısı tekdüzeleşmiş starboylarla anılmasını reddediyoruz. Biz onların ilgi için farklı olmasıyla dalga geçiyoruz. ATAL'lı olmak o zaman bir ayrıcalık olabilecektir. Artık devir marjinal olabilmek için garip özelliklere sahip ATAL'lılarda olmayacak. Çünkü artık <strong>NeoATAL</strong> burada! <br><br>
+        Biz NeoATAL. Bu mesajı ATAL'ın kitlesine kalitesi fazla gelip yalnızlığa terk edilmiş kişilere gönderiyoruz. Biz buradayız ve sizi bekliyoruz!<br><br>
         <strong>NeoATAL sizlerle, Allah yardımcınız olsun!</strong>
-      </p>
+        
     </section>
 
     <footer>
